--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<app-driver *ngFor="let vzc of vozaci; index as i; first as prv;last as posleden; odd as par; even as nepar "
+<app-driver *ngFor="let vzc of vozaci; index as i; first as prv; odd as par; even as nepar "
 [class.prv]="prv"
 [reden]="i+1"
 [vozac]="vzc"
